--- a/src/main/resources/templates/peoplenumber/pulic/html/area.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/area.html
@@ -1,32 +1,32 @@
-<!--<script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=lf4QntWkxxBhsSS8T9jKSRnzGhVptq4v"></script>-->
 <!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <style type="text/css">
-        body, html{width: 100%;height: 100%;margin:0;font-family:"微软雅黑";font-size:14px;}
-        #l-map{height:300px;width:100%;}
-        #r-result{width:100%;}
-    </style>
-    <script type="text/javascript" src="//api.map.baidu.com/api?v=2.0&ak=lf4QntWkxxBhsSS8T9jKSRnzGhVptq4v"></script>
-    <title>关键字输入提示词条</title>
+<html lang="zh-cmn-Hans">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+<title>百度地图API</title>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=lf4QntWkxxBhsSS8T9jKSRnzGhVptq4v"></script>
+<!-- 如果需要拖拽鼠标进行操作，可引入以下js文件 -->
+<script type="text/javascript" src="http://api.map.baidu.com/library/RectangleZoom/1.2/src/RectangleZoom_min.js"></script>
+<style type="text/css">
+    body, html {width: 100%;height: 100%;overflow: hidden;margin:0;font-family:"微软雅黑";}
+</style>
 </head>
 <body>
-<div id="l-map"></div>
-<div id="r-result">请输入:<input  type="text" id="suggestId" size="20" value="百度" style="width:150px;" /></div>
+<div id="allmap" style="width: 800px;height: 500px;"></div>
+<div id="r-result">请输入:<input type="text" id="suggestId" size="20" value="百度" style="width:150px;" /></div>
 <div id="searchResultPanel" style="border:1px solid #C0C0C0;width:150px;height:auto; display:none;"></div>
-<h3 id="aaa"></h3>
 </body>
 </html>
 <script type="text/javascript">
+   var lng,lat;
     // 百度地图API功能
     function G(id) {
         return document.getElementById(id);
     }
 
-    var map = new BMap.Map("l-map");
-    map.centerAndZoom("天津",12);                   // 初始化地图,设置城市和地图级别。
+    var map = new BMap.Map("allmap");
+    map.enableScrollWheelZoom();   //启用滚轮放大缩小，默认禁用
+    map.enableContinuousZoom();    //启用地图惯性拖拽，默认禁用
+     map.centerAndZoom("天津",12);   // 初始化地图,设置城市和地图级别。
 
     var ac = new BMap.Autocomplete(    //建立一个自动完成的对象
         {"input" : "suggestId"
@@ -56,7 +56,6 @@
         var _value = e.item.value;
         myValue = _value.province +  _value.city +  _value.district +  _value.street +  _value.business;
         G("searchResultPanel").innerHTML ="onconfirm<br />index = " + e.item.index + "<br />myValue = " + myValue;
-
         setPlace();
     });
 
@@ -64,16 +63,23 @@
         map.clearOverlays();    //清除地图上所有覆盖物
         function myFun(){
             var pp = local.getResults().getPoi(0).point;    //获取第一个智能搜索的结果
+            console.log('经度：'+pp.lng, '纬度：'+pp.lat);
             map.centerAndZoom(pp, 18);
             map.addOverlay(new BMap.Marker(pp));    //添加标注
+            lng=pp.lng;
+            lat=pp.lat;
+            on();
         }
         var local = new BMap.LocalSearch(map, { //智能搜索
             onSearchComplete: myFun
         });
         local.search(myValue);
-        // alert(myValue)
+        // on();
+    }
+function on() {
+alert(111)
 
-        var mPoint = new BMap.Point(myValue);
+        var mPoint = new BMap.Point(lng,lat);
         map.enableScrollWheelZoom();
         // // map.centerAndZoom(mPoint,15);
         //
@@ -84,8 +90,6 @@
             strokeOpacity: 0.3//线透明度
         });
         map.addOverlay(circle);
-        // var local =  new BMap.LocalSearch(map, {renderOptions: {map: map, autoViewport: false}});
-        // local.searchNearby('学校',mPoint,1000);
-    }
 
+    }
 </script>
