--- a/src/main/resources/templates/peoplenumber/pulic/html/p_main.html
+++ b/src/main/resources/templates/peoplenumber/pulic/html/p_main.html
@@ -7,15 +7,10 @@
     <script src="../static/assets/js/jquery.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Bootstrap Core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom CSS -->
     <link href="../static/css/five.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-<!--    <link href="../font-awesome-4.1.0/css/font-awesome.min./css" rel="stylesheet" type="text/css">-->
-<!--    <link href="http://fonts.useso.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">-->
     <link href='http://fonts.useso.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='http://fonts.useso.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.useso.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
@@ -44,7 +39,9 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li class="hidden"> <a href=""></a> </li>
-                <li> <a class="page-scroll" >主页</a> </li>
+                <li> <a href="p_main.html" class="page-scroll" style="color: #0FB9EF">主页</a> </li>
+                <li> <a href="P_TodayAccount.html" class="page-scroll" >人数统计图</a> </li>
+<!--                <li> <a href="P_Todayliveness.html" class="page-scroll" >活跃度排行榜</a> </li>-->
                 <li> <a class="page-scroll">用户名：<span id="user">张三</span></a> </li>
                 <li> <a class="page-scroll" ></a> </li>
                 <li> <a class="page-scroll"></a> </li>
